infrastructure/kubernetes/network-policies/postgres-network-policy.yaml
apiVersion: networking.k8s.io/v1

kind: NetworkPolicy

metadata:
  name: postgres-network-policy
  namespace: ${K8S_NAMESPACE}

spec:
  podSelector:
    matchLabels:
      app: postgres

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: auth-service

      ports:
        - protocol: TCP
          port: 5432
